--- a/z-example.cabal
+++ b/z-example.cabal
@@ -1,5 +1,5 @@
 cabal-version:      2.4
-name:               Z-Examples
+name:               Z-Example
 version:            0.1.0.0
 
 maintainer:         winter
@@ -13,8 +13,8 @@ executable wc
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:    base >=4.12.0.0
-                    , Z-Data >= 0.1.4
-                    , Z-IO >= 0.1.3
+                    , Z-Data >= 0.1.6.1 && < 0.1.7
+                    , Z-IO >= 0.1.5.1
     hs-source-dirs:   ./
     default-language: Haskell2010
 
@@ -27,8 +27,22 @@ executable http-bench
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:    base >=4.12.0.0
-                    , Z-Data >= 0.1.6 && < 0.1.7
-                    , Z-IO >= 0.1.3
+                    , Z-Data >= 0.1.6.1 && < 0.1.7
+                    , Z-IO >= 0.1.5.1
     hs-source-dirs:   ./
     default-language: Haskell2010
     ghc-options:  -O2 -threaded -rtsopts -eventlog -with-rtsopts=-N
+
+executable guess-std-type
+    main-is:          guess-std-type.hs
+
+    -- Modules included in this executable, other than Main.
+    -- other-modules:
+
+    -- LANGUAGE extensions used by modules in this package.
+    -- other-extensions:
+    build-depends:    base >=4.12.0.0
+                    , Z-Data >= 0.1.6.1 && < 0.1.7
+                    , Z-IO >= 0.1.5.1
+    hs-source-dirs:   ./
+    default-language: Haskell2010
