--- a/z-example.cabal
+++ b/z-example.cabal
@@ -13,8 +13,8 @@ executable wc
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:    base >=4.12.0.0
-                    , Z-Data >= 0.1.6.1 && < 0.1.7
-                    , Z-IO >= 0.1.5.2
+                    , Z-Data >= 0.1.7 
+                    , Z-IO >= 0.1.6
     hs-source-dirs:   ./
     default-language: Haskell2010
 
@@ -27,8 +27,8 @@ executable http-bench
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:    base >=4.12.0.0
-                    , Z-Data >= 0.1.6.1 && < 0.1.7
-                    , Z-IO >= 0.1.5.2
+                    , Z-Data >= 0.1.7 
+                    , Z-IO >= 0.1.6
     hs-source-dirs:   ./
     default-language: Haskell2010
     ghc-options:  -O2 -threaded -rtsopts -eventlog -with-rtsopts=-N
@@ -42,7 +42,7 @@ executable guess-std-type
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:    base >=4.12.0.0
-                    , Z-Data >= 0.1.6.1 && < 0.1.7
-                    , Z-IO >= 0.1.5.2
+                    , Z-Data >= 0.1.7 
+                    , Z-IO >= 0.1.6
     hs-source-dirs:   ./
     default-language: Haskell2010
