--- a/z-example.cabal
+++ b/z-example.cabal
@@ -17,6 +17,7 @@ executable wc
                     , Z-IO >= 0.1.6
     hs-source-dirs:   ./
     default-language: Haskell2010
+    ghc-options:  -O2 
 
 executable http-bench
     main-is:          http-bench.hs
@@ -46,3 +47,21 @@ executable guess-std-type
                     , Z-IO >= 0.1.6
     hs-source-dirs:   ./
     default-language: Haskell2010
+
+executable json-bench
+    main-is:          json-bench.hs
+
+    -- Modules included in this executable, other than Main.
+    -- other-modules:
+
+    -- LANGUAGE extensions used by modules in this package.
+    -- other-extensions:
+    build-depends:    base >=4.12.0.0
+                    , criterion 
+                    , aeson
+                    , bytestring
+                    , Z-Data >= 0.1.7 
+                    , Z-IO >= 0.1.6
+    hs-source-dirs:   ./
+    default-language: Haskell2010
+    ghc-options:  -O2 
