--- a/.github/workflows/ubuntuCI.yml
+++ b/.github/workflows/ubuntuCI.yml
@@ -1,19 +1,13 @@
-on: [push]
 name: ubuntu-ci
+on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        ghc: ['8.6.5', '8.8.4', '8.10.2']
-        cabal: ['2.4.1.0', '3.4.0.0']
-        exclude:
-          # GHC 8.8+ only works with cabal v3+
-          - ghc: 8.8.4
-            cabal: 2.4.1.0
-          - ghc: 8.10.2
-            cabal: 2.4.1.0
-    name: Haskell GHC ${{ matrix.ghc }} sample
+        ghc: ['8.8.4', '8.10.2']
+        cabal: ['3.2', '3.4']
+    name: Haskell GHC ${{ matrix.ghc }}
     env:
         CONFIG: "--enable-tests --enable-benchmarks"
     steps:
@@ -21,14 +15,6 @@ jobs:
         with:
           submodules: 'recursive'
 
-      - name: Setup Haskell
-        uses: actions/setup-haskell@v1
-        with:
-          ghc-version: ${{ matrix.ghc }}
-          cabal-version: ${{ matrix.cabal }}
-
-      - run: cabal v2-update
-      - run: cabal v2-freeze $CONFIG
       - uses: actions/cache@v2
         with:
           path: |
@@ -38,4 +24,12 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-${{ matrix.ghc }}-
 
+      - name: Setup Haskell
+        uses: haskell/actions/setup@v1
+        with:
+          ghc-version: ${{ matrix.ghc }}
+          cabal-version: ${{ matrix.cabal }}
+
+      - run: cabal v2-update
+      - run: cabal v2-freeze $CONFIG
       - run: cabal v2-build $CONFIG
