--- a/Z-Example.cabal
+++ b/Z-Example.cabal
@@ -72,10 +72,11 @@ executable z-lsp-network-client
   main-is:          client.hs
   hs-source-dirs:   Network/LanguageServer
   build-depends:
-    , base    >=4.12.0.0 && <5
-    , Z-Data  ^>=0.6
-    , Z-IO    ^>=0.6.2
-    , Z-YAML  ^>=0.3
+    , base                  >=4.12.0.0 && <5
+    , optparse-applicative  ^>=0.16
+    , Z-Data                ^>=0.6
+    , Z-IO                  ^>=0.6.2
+    , Z-YAML                ^>=0.3
 
   default-language: Haskell2010
   ghc-options:
