--- a/FileSystem/config/simple_file_sync.yaml
+++ b/FileSystem/config/simple_file_sync.yaml
@@ -1,7 +1,9 @@
 - src_path: .
   dest_path: /tmp/aaa
+  rsync_opts:
+    - --exclude dist-newstyle
+    - --exclude local-data
+  # alias for --exclude
   ignores:
-    - .stack-work
-    - dist-newstyle
+    - --exclude .stack-work
     - stack.yaml.lock
-    - local-data
